--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/cado.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CoolCado | Unlocking stablecoins</title>
+  <title>MultiPuck | Play MultiPuck online with friends</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap');
   </style>
